<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sigyn_behavior_trees</name>
  <version>1.0.0</version>
  <description>Behavior trees for Sigyn</description>
  <maintainer email="mike@wimblerobotics.com">Michael Wimble</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>action_msgs</depend>
  <depend>behaviortree_cpp</depend>
  <depend>nav2_behaviors</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/behavior_plugin.xml" />
  </export>
</package>
