<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- SPDX-License-Identifier: Apache-2.0 -->
<!-- Copyright 2026 Wimble Robotics -->
<package format="3">
  <name>sigyn_bringup</name>
  <version>1.0.0</version>
  <description>Sigyn robot bringup package: launch files, config, and maps.</description>
  <maintainer email="mike@wimblerobotics.com">Michael Wimble</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime launch dependencies -->
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_smac_planner</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>wr_twist_multiplexer</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
