<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sigyn_hardware_interface</name>
  <version>1.0.0</version>
  <description>
    ROS2 Control Hardware Interface for Sigyn robot.
    Provides hardware abstraction layer for motor control and sensor integration
    through the TeensyV2 embedded system via ros2_control framework.
  </description>
  
  <maintainer email="mike@wimblerobotics.com">Michael Wimble</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 Control dependencies -->
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <!-- Message and service dependencies -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Sigyn-specific dependencies -->
  <depend>sigyn_interfaces</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
