<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sigyn_house_patroller</name>
  <version>0.1.0</version>
  <description>Comprehensive house patrol system for Sigyn robot with threat detection and monitoring</description>
  <maintainer email="michael@wimblerobotics.com">Michael Wimble</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Navigation dependencies -->
  <depend>nav2_msgs</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>behaviortree_cpp</depend>
  <depend>nav2_core</depend>
  <depend>nav2_util</depend>

  <!-- Message dependencies -->
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- Additional dependencies -->
  <depend>sqlite3_vendor</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>lifecycle_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>pcl_conversions</depend>
  <depend>vision_msgs</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
