<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sigyn_interfaces</name>
  <version>0.9.3</version>
  <description>Contains message and service definitions used by the examples.</description>

  <maintainer email="mike@wimblerobotics.com">Michael Wimble</maintainer>

  <license>Apache License 2.0</license>

  <author email="mike@wimblerobotics.com">Michael Wimble</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <exec_depend>python3-numpy</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <ros1_bridge mapping_rules="mapping_rules.yaml"/> -->
  </export>
</package>
