<?xml version="1.0"?>
<package format="3">
  <name>sigyn_lidar</name>
  <version>0.0.1</version>
  <description>Multi-LD06 lidar driver with per-lidar and fused deskewed /scan output.</description>
  <maintainer email="robot@sigyn.local">Sigyn</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>builtin_interfaces</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
